Use font-path variable

--- a/source/scss/cagov/icon-font.scss
+++ b/source/scss/cagov/icon-font.scss
@@ -4,8 +4,8 @@
 
 @font-face {
   font-family: "CaGov";
-  src: url("../fonts/CaGov.ttf?ocljyw") format("truetype"), url("fonts/ca-gov-icon.woff?t3czrh") format("woff"),
-    url("../fonts/CaGov.woff2?ocljyw") format("woff2"), url("../fonts/CaGov.svg??ocljyw#CaGov") format("svg");
+  src: url("#{$font-path}/CaGov.ttf?ocljyw") format("truetype"), url("#{$font-path}/ca-gov-icon.woff?t3czrh") format("woff"),
+    url("#{$font-path}/CaGov.woff2?ocljyw") format("woff2"), url("#{$font-path}/CaGov.svg??ocljyw#CaGov") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
