--- a/source/scss/cagov/type.scss
+++ b/source/scss/cagov/type.scss
@@ -8,7 +8,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url("/fonts/SourceSansPro-Regular.woff2") format("woff2");
+    src: url("#{$font-path}/SourceSansPro-Regular.woff2") format("woff2");
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -17,7 +17,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url("/fonts/SourceSansPro-Regular.woff2") format("woff2");
+    src: url("#{$font-path}/SourceSansPro-Regular.woff2") format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
         U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
@@ -27,7 +27,7 @@
     font-style: italic;
     font-weight: 400;
     font-display: swap;
-    src: url("/fonts/SourceSansPro-Italic.woff2") format("woff2");
+    src: url("#{$font-path}/SourceSansPro-Italic.woff2") format("woff2");
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -36,7 +36,7 @@
     font-style: italic;
     font-weight: 400;
     font-display: swap;
-    src: url("/fonts/SourceSansPro-Italic.woff2") format("woff2");
+    src: url("#{$font-path}/SourceSansPro-Italic.woff2") format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
         U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
@@ -46,7 +46,7 @@
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url("/fonts/SourceSansPro-Bold.woff2") format("woff2");
+    src: url("#{$font-path}/SourceSansPro-Bold.woff2") format("woff2");
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -55,7 +55,7 @@
     font-style: normal;
     font-weight: 700;
     font-display: swap;
-    src: url("/fonts/SourceSansPro-Bold.woff2") format("woff2");
+    src: url("#{$font-path}/SourceSansPro-Bold.woff2") format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
         U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
@@ -66,7 +66,7 @@
     font-style: italic;
     font-weight: 700;
     font-display: swap;
-    src: url("/fonts/SourceSansPro-BoldItalic.woff2") format("woff2");
+    src: url("#{$font-path}/SourceSansPro-BoldItalic.woff2") format("woff2");
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -75,7 +75,7 @@
     font-style: italic;
     font-weight: 700;
     font-display: swap;
-    src: url("/fonts/SourceSansPro-BoldItalic.woff2") format("woff2");
+    src: url("#{$font-path}/SourceSansPro-BoldItalic.woff2") format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
         U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
@@ -87,7 +87,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url("/fonts/AsapCondensed-Regular.woff2") format("woff2");
+    src: url("#{$font-path}/AsapCondensed-Regular.woff2") format("woff2");
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -96,7 +96,7 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url("/fonts/AsapCondensed-Regular.woff2") format("woff2");
+    src: url("#{$font-path}/AsapCondensed-Regular.woff2") format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
         U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
@@ -107,7 +107,7 @@
     font-style: normal;
     font-weight: 600;
     font-display: swap;
-    src: url("/fonts/AsapCondensed-SemiBold.woff2") format("woff2");
+    src: url("#{$font-path}/AsapCondensed-SemiBold.woff2") format("woff2");
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -116,7 +116,7 @@
     font-style: normal;
     font-weight: 600;
     font-display: swap;
-    src: url("/fonts/AsapCondensed-SemiBold.woff2") format("woff2");
+    src: url("#{$font-path}/AsapCondensed-SemiBold.woff2") format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
         U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
@@ -414,22 +414,22 @@ a.list-group-item {
 
 @font-face {
     font-family: "OpenDyslexicAlta Regular";
-    src: url("../fonts/OpenDyslexicAlta-Regular.eat");
-    src: url("../fonts/OpenDyslexicAlta-Regular.eot#iefix") format("embedded-opentype"),
-        url("../fonts/OpenDyslexicAlta-Regular.ttf") format("truetype"),
-        url("../fonts/OpenDyslexicAlta-Regular.woff") format("woff"),
-        url("../fonts/OpenDyslexicAlta-Regular.svg#OpenDyslexicAlta") format("svg");
+    src: url("#{$font-path}/OpenDyslexicAlta-Regular.eat");
+    src: url("#{$font-path}/OpenDyslexicAlta-Regular.eot#iefix") format("embedded-opentype"),
+        url("#{$font-path}/OpenDyslexicAlta-Regular.ttf") format("truetype"),
+        url("#{$font-path}/OpenDyslexicAlta-Regular.woff") format("woff"),
+        url("#{$font-path}/OpenDyslexicAlta-Regular.svg#OpenDyslexicAlta") format("svg");
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: "OpenDyslexic Regular";
-    src: url("../fonts/OpenDyslexic-Regular.eat");
-    src: url("../fonts/OpenDyslexic-Regular.eot#iefix") format("embedded-opentype"),
-        url("../fonts/OpenDyslexic-Regular.ttf") format("truetype"),
-        url("../fonts/OpenDyslexic-Regular.woff") format("woff"),
-        url("../fonts/OpenDyslexic-Regular.svg#OpenDyslexicAlta") format("svg");
+    src: url("#{$font-path}/OpenDyslexic-Regular.eat");
+    src: url("#{$font-path}/OpenDyslexic-Regular.eot#iefix") format("embedded-opentype"),
+        url("#{$font-path}/OpenDyslexic-Regular.ttf") format("truetype"),
+        url("#{$font-path}/OpenDyslexic-Regular.woff") format("woff"),
+        url("#{$font-path}/OpenDyslexic-Regular.svg#OpenDyslexicAlta") format("svg");
     font-weight: normal;
     font-style: normal;
 }
