Fixed back-to-top console JS error in footer

--- a/src/scss/cagov/global-footer.scss
+++ b/src/scss/cagov/global-footer.scss
@@ -11,6 +11,9 @@
 
     .cagov-logo {
         margin-right: 1.5rem;
+        img {
+            height: 1.7rem;
+        }
         svg {
             .ca {
                 fill: #fec02f;
