Replaced site fonts with Public Sans that is used by Design System #195

--- a/src/scss/cagov/type.scss
+++ b/src/scss/cagov/type.scss
@@ -4,119 +4,140 @@
 
 /* latin-ext */
 @font-face {
-    font-family: "Source Sans Pro";
+    font-family: "Public Sans";
     font-style: normal;
-    font-weight: 400;
+    font-weight: 200;
     font-display: swap;
-    src: url("/fonts/SourceSansPro-Regular.woff2") format("woff2");
+    src: url("#{$font-path}/publicsans-extralight-webfont.woff2") format("woff2");
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
-    font-family: "Source Sans Pro";
+    font-family: "Public Sans";
     font-style: normal;
-    font-weight: 400;
+    font-weight: 200;
     font-display: swap;
-    src: url("/fonts/SourceSansPro-Regular.woff2") format("woff2");
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
-        U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* latin-ext */
-@font-face {
-    font-family: "Source Sans Pro";
-    font-style: italic;
-    font-weight: 400;
-    font-display: swap;
-    src: url("/fonts/SourceSansPro-Italic.woff2") format("woff2");
-    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-    font-family: "Source Sans Pro";
-    font-style: italic;
-    font-weight: 400;
-    font-display: swap;
-    src: url("/fonts/SourceSansPro-Italic.woff2") format("woff2");
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
-        U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-/* latin-ext */
-@font-face {
-    font-family: "Source Sans Pro";
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src: url("/fonts/SourceSansPro-Bold.woff2") format("woff2");
-    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-    font-family: "Source Sans Pro";
-    font-style: normal;
-    font-weight: 700;
-    font-display: swap;
-    src: url("/fonts/SourceSansPro-Bold.woff2") format("woff2");
+    src: url("#{$font-path}/publicsans-extralight-webfont.woff2") format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
         U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 /* latin-ext */
 @font-face {
-    font-family: "Source Sans Pro";
-    font-style: italic;
-    font-weight: 700;
+    font-family: "Public Sans";
+    font-style: normal;
+    font-weight: 300;
     font-display: swap;
-    src: url("/fonts/SourceSansPro-BoldItalic.woff2") format("woff2");
+    src: url("#{$font-path}/publicsans-light-webfont.woff2") format("woff2");
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
-    font-family: "Source Sans Pro";
-    font-style: italic;
-    font-weight: 700;
-    font-display: swap;
-    src: url("/fonts/SourceSansPro-BoldItalic.woff2") format("woff2");
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
-        U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-/* HEADINGS */
-/* latin-ext */
-@font-face {
-    font-family: "Asap Condensed";
+    font-family: "Public Sans";
     font-style: normal;
-    font-weight: 400;
+    font-weight: 300;
     font-display: swap;
-    src: url("/fonts/AsapCondensed-Regular.woff2") format("woff2");
-    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
-/* latin */
-@font-face {
-    font-family: "Asap Condensed";
-    font-style: normal;
-    font-weight: 400;
-    font-display: swap;
-    src: url("/fonts/AsapCondensed-Regular.woff2") format("woff2");
+    src: url("#{$font-path}/publicsans-light-webfont.woff2") format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
         U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 /* latin-ext */
 @font-face {
-    font-family: "Asap Condensed";
+    font-family: "Public Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url("#{$font-path}/publicsans-regular-webfont.woff2") format("woff2");
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: "Public Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url("#{$font-path}/publicsans-regular-webfont.woff2") format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
+        U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* latin-ext */
+@font-face {
+    font-family: "Public Sans";
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url("#{$font-path}/publicsans-medium-webfont.woff2") format("woff2");
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: "Public Sans";
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url("#{$font-path}/publicsans-medium-webfont.woff2") format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
+        U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* latin-ext */
+@font-face {
+    font-family: "Public Sans";
     font-style: normal;
     font-weight: 600;
     font-display: swap;
-    src: url("/fonts/AsapCondensed-SemiBold.woff2") format("woff2");
+    src: url("#{$font-path}/publicsans-semibold-webfont.woff2") format("woff2");
     unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
 @font-face {
-    font-family: "Asap Condensed";
+    font-family: "Public Sans";
     font-style: normal;
     font-weight: 600;
     font-display: swap;
-    src: url("/fonts/AsapCondensed-SemiBold.woff2") format("woff2");
+    src: url("#{$font-path}/publicsans-semibold-webfont.woff2") format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
+        U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* latin-ext */
+@font-face {
+    font-family: "Public Sans";
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url("#{$font-path}/publicsans-bold-webfont.woff2") format("woff2");
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: "Public Sans";
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url("#{$font-path}/publicsans-bold-webfont.woff2") format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
+        U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+/* latin-ext */
+@font-face {
+    font-family: "Public Sans";
+    font-style: normal;
+    font-weight: 800;
+    font-display: swap;
+    src: url("#{$font-path}/publicsans-extrabold-webfont.woff2") format("woff2");
+    unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: "Public Sans";
+    font-style: normal;
+    font-weight: 800;
+    font-display: swap;
+    src: url("#{$font-path}/publicsans-extrabold-webfont.woff2") format("woff2");
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
         U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
@@ -227,6 +248,8 @@ h1,
     font-size: $font-size-h1;
     margin-top: 3rem;
     margin-bottom: 1.6rem;
+    font-weight: $font-weight-7;
+    line-height: $font-lineheight-1;
     @include media-breakpoint-up(sm) {
         font-size: calc(#{$font-size-h1} + #{$ratio-headers});
         margin-top: calc(3rem + #{$ratio-headers});
@@ -241,7 +264,8 @@ h2,
     font-size: $font-size-h2;
     margin-top: 2.7rem;
     margin-bottom: 1.4rem;
-
+    font-weight: $font-weight-7;
+    line-height: $font-lineheight-2;
     @include media-breakpoint-up(sm) {
         font-size: calc(#{$font-size-h2} + #{$ratio-headers});
         margin-top: calc(2.7rem + #{$ratio-headers});
@@ -256,6 +280,8 @@ h3,
     font-size: $font-size-h3;
     margin-top: 2.4rem;
     margin-bottom: 1.2rem;
+    font-weight: $font-weight-7;
+    line-height: $font-lineheight-3;
     @include media-breakpoint-up(sm) {
         font-size: calc(#{$font-size-h3} + #{$ratio-headers});
         margin-top: calc(2.4rem + #{$ratio-headers});
@@ -270,6 +296,8 @@ h4,
     font-size: $font-size-h4;
     margin-top: 2rem;
     margin-bottom: 1rem;
+    font-weight: $font-weight-7;
+    line-height: $font-lineheight-4;
     @include media-breakpoint-up(sm) {
         font-size: calc(#{$font-size-h4} + #{$ratio-headers});
         margin-top: calc(2rem + #{$ratio-headers});
@@ -285,7 +313,8 @@ h5,
     font-size: $font-size-h5;
     margin-top: 1.7rem;
     margin-bottom: 0.8rem;
-
+    font-weight: $font-weight-7;
+    line-height: $font-lineheight-5;
     @include media-breakpoint-up(sm) {
         font-size: calc(#{$font-size-h5} + #{$ratio-headers});
         margin-top: calc(1.7rem + #{$ratio-headers});
@@ -300,6 +329,8 @@ h6,
     font-size: $font-size-h6;
     margin-top: 1.4rem;
     margin-bottom: 0.6rem;
+    font-weight: $font-weight-7;
+    line-height: $font-lineheight-5;
     @include media-breakpoint-up(sm) {
         font-size: calc(#{$font-size-h6} + #{$ratio-headers});
         margin-top: calc(1.4rem + #{$ratio-headers});
@@ -307,21 +338,6 @@ h6,
     }
 
     font-family: $headings-font-family;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
-    line-height: $headings-line-height;
 }
 
 // ICON SIZING
@@ -423,22 +439,22 @@ a.list-group-item {
 
 @font-face {
     font-family: "OpenDyslexicAlta Regular";
-    src: url("../fonts/OpenDyslexicAlta-Regular.eat");
-    src: url("../fonts/OpenDyslexicAlta-Regular.eot#iefix") format("embedded-opentype"),
-        url("../fonts/OpenDyslexicAlta-Regular.ttf") format("truetype"),
-        url("../fonts/OpenDyslexicAlta-Regular.woff") format("woff"),
-        url("../fonts/OpenDyslexicAlta-Regular.svg#OpenDyslexicAlta") format("svg");
+    src: url("#{$font-path}/OpenDyslexicAlta-Regular.eat");
+    src: url("#{$font-path}/OpenDyslexicAlta-Regular.eot#iefix") format("embedded-opentype"),
+        url("#{$font-path}/OpenDyslexicAlta-Regular.ttf") format("truetype"),
+        url("#{$font-path}/OpenDyslexicAlta-Regular.woff") format("woff"),
+        url("#{$font-path}/OpenDyslexicAlta-Regular.svg#OpenDyslexicAlta") format("svg");
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: "OpenDyslexic Regular";
-    src: url("../fonts/OpenDyslexic-Regular.eat");
-    src: url("../fonts/OpenDyslexic-Regular.eot#iefix") format("embedded-opentype"),
-        url("../fonts/OpenDyslexic-Regular.ttf") format("truetype"),
-        url("../fonts/OpenDyslexic-Regular.woff") format("woff"),
-        url("../fonts/OpenDyslexic-Regular.svg#OpenDyslexicAlta") format("svg");
+    src: url("#{$font-path}/OpenDyslexic-Regular.eat");
+    src: url("#{$font-path}/OpenDyslexic-Regular.eot#iefix") format("embedded-opentype"),
+        url("#{$font-path}/OpenDyslexic-Regular.ttf") format("truetype"),
+        url("#{$font-path}/OpenDyslexic-Regular.woff") format("woff"),
+        url("#{$font-path}/OpenDyslexic-Regular.svg#OpenDyslexicAlta") format("svg");
     font-weight: normal;
     font-style: normal;
 }
