Updated back-to-top component to look like Design System #245

--- a/src/scss/cagov/utility-header.scss
+++ b/src/scss/cagov/utility-header.scss
@@ -171,12 +171,8 @@
                     margin-top: 6px;
                 }
 
-                @media (min-width: $screen-xs-max) and (max-width: $screen-sm-max) {
-                    margin-right: 15px;
-                }
-
                 @media (max-width: $screen-xs-max) {
-                    margin-right: 12px;
+                    margin-right: 0.4rem;
                     margin-left: 0;
                 }
 
@@ -191,6 +187,7 @@
                 margin-right: 1rem;
                 font-size: 0.95rem;
                 @media (max-width: $screen-xs-max) {
+                    margin-right: 0;
                     .desktop-only {
                         display: none;
                     }
