--- a/src/scss/cagov/return-top.scss
+++ b/src/scss/cagov/return-top.scss
@@ -10,36 +10,50 @@ html {
   position: fixed;
   z-index: 99999;
   right: -100px;
-  bottom: 125px;
-  padding: 0 5px;
-  border: 1px solid $gray-lighter;
+  bottom: 90px;
+  padding: 5px 10px 10px 10px;
+  border: 1px solid;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
-
   opacity: 0;
   visibility: hidden;
-  color: #fff;
-  background: rgba(0, 0, 0, 0.6);
-
-  font-size: 30px;
+  background: $white;
+  font-size: $font-size-regular;
   text-align: center;
   text-decoration: none;
   cursor: pointer;
   transition: all 0.5s ease;
+
   &:before {
     content: "\32"; // .ca-gov-icon-caret-up
     font-family: "CaGov";
     font-weight: 900;
+    padding-right: 3px;
+    font-size: 1.3rem;
   }
 
   &.is-visible {
     opacity: 1;
     visibility: visible;
     display: inline;
+    background-color: $white;
+    bottom: 90px;
     right: 0;
 
-    @media (max-width: $screen-xs-max) {
-      display: none; // beta 5.0 addition
+    &:hover {
+      background-color: $gray-100;
+      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+    }
+  }
+  @media (min-width: $screen-md-min) {
+    .sr-only {
+      position: relative !important;
+      width: unset !important;
+      height: unset !important;
+      padding: 0 !important;
+      margin: 0 !important;
+      overflow: visible !important;
+      clip: unset !important;
     }
   }
 }
