--- a/src/scss/colorscheme/colorscheme-master.scss
+++ b/src/scss/colorscheme/colorscheme-master.scss
@@ -27,6 +27,7 @@
 @import "cs-buttons.scss";
 @import "cs-form.scss";
 @import "cs-blocks.scss";
+@import "cs-return-top.scss";
 @import "cs-utility.scss";
 
 @import "cs-high-contrast.scss"; // File should always be last
