--- a/src/scss/colorscheme/colorscheme-mono-import.scss
+++ b/src/scss/colorscheme/colorscheme-mono-import.scss
@@ -31,6 +31,7 @@
 @import "cs-buttons.scss";
 @import "cs-blocks.scss";
 @import "cs-panes.scss";
+@import "cs-return-top.scss";
 @import "cs-utility.scss";
 
 @import "cs-high-contrast.scss"; // File should always be last
