--- a/src/scss/colorscheme/colorscheme-santabarbara-import.scss
+++ b/src/scss/colorscheme/colorscheme-santabarbara-import.scss
@@ -32,6 +32,7 @@
 @import "cs-form.scss";
 @import "cs-blocks.scss";
 @import "cs-panes.scss";
+@import "cs-return-top.scss";
 @import "cs-utility.scss";
 
 @import "cs-high-contrast.scss"; // File should always be last
