--- a/src/scss/cagov/button.scss
+++ b/src/scss/cagov/button.scss
@@ -6,42 +6,14 @@
     NOTE: This might make more sence later to be moved to the color schemes
 */
 
-/* .btn-primary {
-    border:2px solid #fff;
-    background:none;
-    color:#fff;
-    transition:all 0.5s;
-    
-    &:hover, &:focus {
-        .rgba (#fff, .2);
-        background-color: $rgba;
-        //box-shadow: 0 0 5px rgba(255,255,255,0.8);
-        border-color:#fff;
-        color:#fff;
-    }
-} */
-
 // better-button = color; background; border, hover-color; hover-background; hover-border
 .btn-primary {
-    @include better-button(
-        $white,
-        $color-p2,
-        $color-p2,
-        $white,
-        darken($color-p2, 7%),
-        darken($color-p2, 7%)
-    ); // beta 5.0 addition
-    //border-width:2px;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
+    @include better-button($white, $color-p2, $color-p2, $white, darken($color-p2, 7%), darken($color-p2, 7%));
 }
 
 // better-button = color; background; border, hover-color; hover-background; hover-border
 .btn-outline-primary {
-    @include better-button($color-p2, $white, $color-p2, $white, $color-p2, darken($color-p2, 7%)); // beta 6.0 addition
-    //border-width:2px;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
+    @include better-button($color-p2, $white, $color-p2, darken($color-p2, 7%), $white, darken($color-p2, 7%));
 }
 
 .btn-default {
@@ -53,48 +25,33 @@
         rgba(255, 255, 255, 1),
         $gray-base
     );
-    //border-width:2px;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
 }
 
 // beta 5.0 addition
 .btn-standout {
     @include better-button($white, $color-p3, $color-p3, $white, darken($color-p3, 7%), darken($color-p3, 7%));
-    //border-width:2px;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
 }
 
 // better-button = color; background; border, hover-color; hover-background; hover-border
 .btn-outline-standout {
-    @include better-button($color-p3, $white, $color-p3, $white, $color-p3, darken($color-p3, 7%)); // beta 6.0 addition
-    //border-width:2px;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
+    @include better-button($color-p3, $white, $color-p3, darken($color-p3, 7%), $white, darken($color-p3, 7%));
 }
 
 // beta 5.0 addition
 .btn-highlight {
     @include better-button($text-color, $color-p1, $color-p1, $color-p3, darken($color-p1, 7%), darken($color-p1, 7%));
-    //border-width:2px;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
 }
 
 // better-button = color; background; border, hover-color; hover-background; hover-border
 .btn-outline-highlight {
     @include better-button(
-        $text-color,
-        $white,
-        $color-p1,
-        $text-color,
-        $color-p1,
-        darken($color-p1, 7%)
-    ); // beta 6.0 addition
-    //border-width:2px;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
+        lighten($color-p1, 7%),
+        transparent,
+        lighten($color-p1, 7%),
+        lighten($color-p1, 14%),
+        transparent,
+        lighten($color-p1, 14%)
+    );
 }
 
 .btn-secondary {
@@ -111,10 +68,16 @@
 
 // better-button = color; background; border, hover-color; hover-background; hover-border
 .btn-outline-secondary {
-    @include better-button($gray, $white, $gray, $white, $gray, darken($gray, 7%)); // beta 6.0 addition
-    //border-width:2px;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
+    @include better-button($gray, $white, $gray, darken($gray, 7%), $white, darken($gray, 7%));
+}
+
+// light buttons
+.btn-light {
+    @include better-button($gray-700, $white, $white, $black, $gray-100, $gray-100);
+}
+
+.btn-outline-light {
+    @include better-button($white, transparent, $white, $gray-100, transparent, $gray-100);
 }
 
 //
@@ -272,7 +235,7 @@
     overflow: hidden;
 }
 .btn-primary.btn-hover:before {
-    background: lighten($color-p2, 7%);
+    background: darken($color-p2, 7%);
     overflow: hidden;
 }
 
@@ -313,17 +276,7 @@
     overflow: hidden;
 }
 .btn-outline-primary.btn-hover:before {
-    background: $color-p2;
-    overflow: hidden;
-}
-
-//outline-highlight
-.btn-outline-highlight.btn-hover:hover {
-    background: inherit;
-    overflow: hidden;
-}
-.btn-outline-highlight.btn-hover:before {
-    background: $color-p1;
+    background: $gray-50;
     overflow: hidden;
 }
 
@@ -333,7 +286,7 @@
     overflow: hidden;
 }
 .btn-outline-standout.btn-hover:before {
-    background: $color-p3;
+    background: $gray-50;
     overflow: hidden;
 }
 
@@ -343,7 +296,17 @@
     overflow: hidden;
 }
 .btn-outline-secondary.btn-hover:before {
-    background: $gray;
+    background: $gray-50;
+    overflow: hidden;
+}
+
+//outline-highlight
+.btn-outline-highlight.btn-hover:hover {
+    background: inherit;
+    overflow: hidden;
+}
+.btn-outline-highlight.btn-hover:before {
+    background: rgba(0, 0, 0, 0.2);
     overflow: hidden;
 }
 
@@ -353,7 +316,7 @@
     overflow: hidden;
 }
 .btn-outline-light.btn-hover:before {
-    background: $white;
+    background: rgba(0, 0, 0, 0.2);
     overflow: hidden;
 }
 
