--- a/src/scss/colorscheme/cs-buttons.scss
+++ b/src/scss/colorscheme/cs-buttons.scss
@@ -4,8 +4,9 @@
 ----------------------------------------- */
 
 // better-button = color; background; border, hover-color; hover-background; hover-border
+
 .btn-primary {
-    @include better-button($white, $color-p2, $color-p2, $white, darken($color-p2, 7%), darken($color-p2, 7%)); // beta 5.0 addition
+    @include better-button($white, $color-p2, $color-p2, $white, darken($color-p2, 7%), darken($color-p2, 7%));
     &:disabled {
         color: $white !important;
     }
@@ -15,15 +16,20 @@
     }
 }
 
-
 // better-button = color; background; border, hover-color; hover-background; hover-border
 .btn-outline-primary {
-    @include better-button($color-p2, $white, $color-p2, $white, $color-p2, darken($color-p2, 7%)); // beta 6.0 addition
+    @include better-button($color-p2, $white, $color-p2, darken($color-p2, 7%), $white, darken($color-p2, 7%));
 }
 
-
 .btn-default {
-    @include better-button($gray-base, rgba(255,255,255,.65), $gray-base, $gray-base, rgba(255,255,255,1), $gray-base);
+    @include better-button(
+        $gray-700,
+        rgba(255, 255, 255, 0.65),
+        $gray-700,
+        $gray-base,
+        rgba(255, 255, 255, 1),
+        $gray-base
+    );
 }
 
 // beta 5.0 addition
@@ -41,25 +47,35 @@
 
 // better-button = color; background; border, hover-color; hover-background; hover-border
 .btn-outline-standout {
-    @include better-button($color-p3, $white, $color-p3, $white, $color-p3, darken($color-p3, 7%)); // beta 6.0 addition
+    @include better-button($color-p3, $white, $color-p3, darken($color-p3, 7%), $white, darken($color-p3, 7%));
 }
 
 // beta 5.0 addition
 .btn-highlight {
-    @include better-button($gray-darker, $color-p1, $color-p1, $gray-darker, darken($color-p1, 7%), darken($color-p1, 7%));
+    @include better-button(
+        darken($color-p2, 7%),
+        lighten($color-p1, 7%),
+        lighten($color-p1, 7%),
+        darken($color-p2, 14%),
+        lighten($color-p1, 14%),
+        lighten($color-p1, 14%)
+    );
 }
 
 // better-button = color; background; border, hover-color; hover-background; hover-border
 .btn-outline-highlight {
-    @include better-button($text-color, $white, $color-p1, $text-color, $color-p1, darken($color-p1, 7%)); // beta 6.0 addition
-    &.active {
-        color: $text-color;
-    }
+    @include better-button(
+        lighten($color-p1, 7%),
+        transparent,
+        lighten($color-p1, 7%),
+        lighten($color-p1, 14%),
+        transparent,
+        lighten($color-p1, 14%)
+    );
 }
 
 .btn-secondary {
     @include better-button($gray, $gray-lightest, $gray, $link-hover-color, #fff, $gray-base);
-
 
     &.active {
         background: $gray;
@@ -76,10 +92,18 @@
     }
 }
 
-
 // better-button = color; background; border, hover-color; hover-background; hover-border
 .btn-outline-secondary {
-    @include better-button($gray, $white, $gray, $white, $gray, darken($gray, 7%)); // beta 6.0 addition
+    @include better-button($gray, $white, $gray, darken($gray, 7%), $white, darken($gray, 7%));
+}
+
+// better-button = color; background; border, hover-color; hover-background; hover-border
+.btn-light {
+    @include better-button($gray-700, $white, $white, $black, $gray-100, $gray-100);
+}
+
+.btn-outline-light {
+    @include better-button($white, transparent, $white, $gray-100, transparent, $gray-100);
 }
 
 .check-icon-radio {
