--- a/src/scss/colorscheme/colorscheme-master.scss
+++ b/src/scss/colorscheme/colorscheme-master.scss
@@ -28,6 +28,7 @@
 @import "cs-form.scss";
 @import "cs-blocks.scss";
 @import "cs-return-top.scss";
+@import "cs-page-navigation.scss";
 @import "cs-utility.scss";
 
 @import "cs-high-contrast.scss"; // File should always be last
