--- a/src/scss/colorscheme/colorscheme-shasta-import.scss
+++ b/src/scss/colorscheme/colorscheme-shasta-import.scss
@@ -33,6 +33,7 @@
 @import "cs-blocks.scss";
 @import "cs-panes.scss";
 @import "cs-return-top.scss";
+@import "cs-page-navigation.scss";
 @import "cs-utility.scss";
 
 @import "cs-high-contrast.scss"; // File should always be last
