Updated navigation samples, added templates.json file

--- a/src/_includes/modules/nav-dropdown.html
+++ b/src/_includes/modules/nav-dropdown.html
@@ -2,91 +2,106 @@
 <nav id="navigation" class="main-navigation dropdown">
  <ul id="nav_list" class="top-level-nav">
 
+
   <li class="nav-item">
-   <a href="/sample/" class="first-level-link">Examples</a>
+   <a href="/getting-started.html" class="first-level-link">Getting Started</a>
    <div class="sub-nav">
 
     <ul class="second-level-nav">
      <li class="unit1">
-      <a href="/" class="second-level-link">Link 1</a>
+      <a href="/getting-started.html" class="second-level-link">Getting Started</a>
      </li>
      <li class="unit1">
-      <a href="/" class="second-level-link">Link 2</a>
+      <a href="/update.html" class="second-level-link">Update</a>
      </li>
      <li class="unit1">
-      <a href="/" class="second-level-link">Link 3</a>
+      <a href="/cdn.html" class="second-level-link">CDN</a>
      </li>
      <li class="unit1">
-      <a href="/" class="second-level-link">Link 4</a>
+      <a href="/structure.html" class="second-level-link">Structure</a>
      </li>
      <li class="unit1">
-      <a href="/" class="second-level-link">Link 5</a>
-     </li>
-     <li class="unit1">
-      <a href="/" class="second-level-link">Link 6</a>
+      <a href="/https://github.com/Office-of-Digital-Innovation/California-State-Template" class="second-level-link"
+       target="_blank">Download</a>
      </li>
     </ul>
    </div>
   </li>
+
+
   <li class="nav-item">
-   <a href="/" class="first-level-link">About</a>
+   <a href="/sample/" class="first-level-link">Visual Design</a>
    <div class="sub-nav">
 
     <ul class="second-level-nav">
      <li class="unit1">
-      <a href="/" class="second-level-link">Link 1</a>
+      <a href="/sample/typography.html" class="second-level-link">Typography</a>
      </li>
      <li class="unit1">
-      <a href="/" class="second-level-link">Link 2</a>
+      <a href="/sample/color-schemes.html" class="second-level-link">Color Schemes</a>
      </li>
      <li class="unit1">
-      <a href="/" class="second-level-link">Link 3
-      </a>
+      <a href="/sample/icon-fonts.html" class="second-level-link">Icons</a>
      </li>
-     <li class="unit1">
-      <a href="/" class="second-level-link"><span class="ca-gov-icon-info-bubble" aria-hidden="true"></span>Link 4</a>
-     </li>
-     <li class="unit1">
-      <a href="/" class="second-level-link"><span class="ca-gov-icon-info-bubble" aria-hidden="true"></span>Link 5
-      </a>
-     </li>
-     <li class="unit1">
-      <a href="/" class="second-level-link"><span class="ca-gov-icon-info-bubble" aria-hidden="true"></span>Link 6</a>
+    </ul>
+   </div>
+  </li>
 
 
+  <li class="nav-item">
+   <a href="/" class="first-level-link">Components</a>
+   <div class="sub-nav">
+
+    <ul class="second-level-nav">
+     <li class="unit1">
+      <a href="/sample/" class="second-level-link">Components</a>
+     </li>
+     <li class="unit1">
+      <a href="/sample/navsamples.html" class="second-level-link">Navigation</a>
+     </li>
+     <li class="unit1">
+      <a href="/sample/css-units.html" class="second-level-link">CSS Units</a>
      </li>
     </ul>
    </div>
 
-   <!-- LEFT ALIGNED IMAGE -->
-  <li class="nav-item">
-   <a href="/" class="first-level-link">Structure</a>
-   <div class="sub-nav">
-    <!-- Offset class needed to fix positioning issue caused when positioning the image -->
 
+
+  <li class="nav-item">
+   <a href="/sample/content-patterns.html" class="first-level-link">Templates</a>
+   <div class="sub-nav">
     <ul class="second-level-nav">
      <li class="unit1">
-      <a href="/" class="second-level-link">Link 1</a>
+      <a href="/sample/content-patterns.html" class="second-level-link"><span class="ca-gov-icon-apps"
+        aria-hidden="true"></span>Content Patterns</a>
      </li>
      <li class="unit1">
-      <a href="/" class="second-level-link">Link 2</a>
+      <a href="/sample/page-templates.html" class="second-level-link"><span class="ca-gov-icon-responsive-alt"
+        aria-hidden="true"></span>Page Templates</a>
      </li>
      <li class="unit1">
-      <a href="/" class="second-level-link">Link 3</a>
+      <a href="/sample/layouts.html" class="second-level-link"><span class="ca-gov-icon-desktop-checklist"
+        aria-hidden="true"></span>Page Layouts</a>
      </li>
-     <li class="unit1">
-      <a href="/" class="second-level-link">Link 4</a>
-     </li>
-     <li class="unit1">
-      <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 5
-      </a>
-     </li>
-     <li class="unit1">
-      <a href="/" class="second-level-link"><span class="ca-gov-icon-home" aria-hidden="true"></span>Link 6</a>
-     </li>
-
     </ul>
+   </div>
+  </li>
 
+
+
+  <li class="nav-item">
+   <a href="/about.html" class="first-level-link">About</a>
+   <div class="sub-nav">
+    <ul class="second-level-nav">
+     <li class="unit1">
+      <a href="/about.html" class="second-level-link"><span class="ca-gov-icon-thumb-up"
+        aria-hidden="true"></span>About</a>
+     </li>
+     <li class="unit1">
+      <a href="https://webstandards.ca.gov/" class="second-level-link"><span class="ca-gov-icon-gear"
+        aria-hidden="true"></span>Web Standards</a>
+     </li>
+    </ul>
    </div>
   </li>
 
