--- a/src/_includes/modules/nav-singlelevel.html
+++ b/src/_includes/modules/nav-singlelevel.html
@@ -2,20 +2,20 @@
 <nav id="navigation" class="main-navigation singlelevel auto-highlight">
  <ul id="nav_list" class="top-level-nav">
   <li class="nav-item">
-   <a href="/sample/" class="first-level-link">Examples</a>
+   <a href="/getting-started.html" class="first-level-link">Getting Started</a>
   </li>
   <li class="nav-item">
-   <a href="/about.html" class="first-level-link">About</a>
+   <a href="/sample/color-schemes.html" class="first-level-link">Color Schemes</a>
   </li>
 
   <li class="nav-item">
-   <a href="/structure.html" class="first-level-link">Structure</a>
+   <a href="/sample/" class="first-level-link">Components</a>
   </li>
   <li class="nav-item">
-   <a href="https://github.com/Office-of-Digital-Innovation" target="_blank" class="first-level-link">Download</a>
+   <a href="/sample/content-patterns.html" target="_blank" class="first-level-link">Templates</a>
   </li>
   <li class="nav-item">
-   <a href="http://webstandards.ca.gov/" target="_blank" class="first-level-link">Webtools</a>
+   <a href="/about.html" target="_blank" class="first-level-link">About</a>
   </li>
   <li class="nav-item">
    <a href="/contact.html" class="first-level-link">Contact Us</a>
