--- a/src/scss/colorscheme/cs-typography.scss
+++ b/src/scss/colorscheme/cs-typography.scss
@@ -3,13 +3,17 @@
    /source/scss/colorscheme/typography.scss
 ----------------------------------------- */
 
-
 // REUSABLE STYLE FOR PUBLISHING DATE
 .published {
-    color:$gray;
+ color: $gray;
 }
 
+// LINKS
+a {
+ color: $color-p2;
 
-// LINKS NEED VISUAL INDICATORS OTHER THAN COLOR (USING UNDERLINE MIXING)
-
-
+ &:hover,
+ &:focus {
+  color: darken($color-p2, 7%);
+ }
+}
