--- a/src/scss/cagov/accordion.scss
+++ b/src/scss/cagov/accordion.scss
@@ -4,133 +4,117 @@
 ----------------------------------------- */
 
 /* accordion component specific classes */
-cagov-accordion .cagov-accordion-card {
-  border-radius: 0.3rem !important;
-  margin-bottom: 0;
-  min-height: 3rem;
-  margin-top: 1rem;
-  border: solid 1px #ededef !important;
-}
+/* initial styles */
+cagov-accordion details {
+ margin-bottom: 0;
+ min-height: 3rem;
+ margin-top: 0.5rem;
 
-cagov-accordion .accordion-card-container {
-  display: block;
-  overflow: hidden;
-}
-
-cagov-accordion button.accordion-card-header {
-  display: flex;
-  justify-content: left;
-  align-items: center;
-  padding: 0 0 0 1rem;
-  background-clip: border-box;
-  background-color: #f5f5f5;
-  border: none;
-  position: relative;
-  width: 100%;
-  line-height: 3rem;
-  padding-right: 0.5rem;
-  &:hover {
-    .accordion-title {
-      text-decoration: none !important;
-    }
-  }
-}
-
-cagov-accordion.prog-enhanced button.accordion-card-header {
+ summary {
   cursor: pointer;
-}
+  padding: 0.5rem 3rem 0.5rem 3.75rem;
+  background-color: $gray-50;
+  position: relative;
+  line-height: 2rem;
+  margin: 0;
+  color: $gray-800;
+  font-size: 1.125rem;
+  font-weight: bold;
+  border: 1px solid $gray-200;
 
-cagov-accordion .accordion-title {
-  text-align: left;
-  margin-bottom: 0;
-  color: $link-color;
-  margin-right: auto;
-  width: 90%;
-  padding: 0.8rem 0.5rem 0.8rem 0 !important;
-  font-size: $font-size-regular;
-  @include media-breakpoint-up(sm) {
-    font-size: calc(#{$font-size-regular} + #{$ratio});
+  &:before {
+   position: absolute;
+   height: 100%;
+   width: 2.75rem;
+   border-right: 1px solid $gray-200;
+   top: 0;
+   left: 0;
+   background-color: $gray-50;
+   // top-left | top-right | bottom-right | bottom-left
+   border-radius: 4px 0 0 4px;
+   content: "";
   }
-  font-weight: 700;
-  line-height: 1.5;
-}
 
-cagov-accordion.prog-enhanced .accordion-card-container {
-  height: 0px;
-  transition: height 0.3s ease;
-}
-cagov-accordion.prog-enhanced .accordion-card-container .card-body {
-  padding-left: 1rem;
-  margin-top: 8px;
-}
+  .cagov-open-indicator {
+   position: absolute;
+   left: 0.85rem;
+   top: 1.15rem;
+   border-right: 2px solid black;
+   border-top: 2px solid black;
+   border-radius: 3px;
+   width: 10px;
+   height: 10px;
+   transform: rotate(45deg);
+   transition-property: transform;
+   transition: top 0.2s, left 0.2s, transform 0.2s;
+  }
 
-cagov-accordion.prog-enhanced .accordion-card-container .card-body ul {
-  margin-left: 16px;
-  margin-right: 16px;
-}
-
-cagov-accordion .collapsed {
-  display: block;
-  overflow: hidden;
-  visibility: hidden;
-}
-
-.accordion-title h4,
-.accordion-title h3,
-.accordion-title h2 {
-  padding: 0 !important;
-  margin-top: 0 !important;
-  margin-bottom: 0 !important;
-  font-size: 1.2rem !important;
-  font-weight: 700;
-  color: $link-color;
-  text-align: left !important;
-}
-
-button.accordion-card-header:hover {
-  background-color: #f9f9fa;
-}
-button.accordion-card-header:hover .accordion-title {
-  text-decoration: underline;
-}
-button.accordion-card-header:hover .accordion-title:hover {
-  text-decoration: underline;
-}
-
-button.accordion-card-header:focus {
-  outline-offset: -2px;
-}
-
-.accordion-icon svg line {
-  stroke-width: 4px;
-}
-
-cagov-accordion.prog-enhanced .accordion-alpha .plus-minus {
-  width: 2.125rem;
-  height: 2.125rem;
+  &:hover {
+   color: black;
+   &:before {
+    background-color: $gray-100;
+   }
+   .cagov-open-indicator {
+    border-right: 3px solid black;
+    border-top: 3px solid black;
+   }
+  }
+ }
+ .accordion-body {
+  padding: 1rem;
   border: none;
+  // top-left | top-right | bottom-right | bottom-left
+  border-radius: 0 0 4px 4px;
+  // we use outline instead of border becasue .accordion-body parent's overflow is hidden
+  outline: 1px solid $gray-200;
+  outline-offset: -1px;
+ }
+}
+
+/* styles applied after custom element javascript runs */
+cagov-accordion:defined {
+ details {
+  transition: height 0.2s;
+  height: 3rem;
   overflow: hidden;
-  margin-top: 0.15rem;
-  margin-left: 1rem;
-  color: $link-color;
-  align-self: flex-start;
-}
+ }
 
-.prog-enhanced .accordion-alpha .plus-minus svg {
-  fill: $link-color;
-  width: 25px;
-  height: 25px;
-}
+ summary::-webkit-details-marker {
+  display: none;
+ }
 
-.prog-enhanced .accordion-alpha-open cagov-plus .accordion-icon {
-  display: none !important;
-}
-.prog-enhanced .accordion-alpha-open cagov-minus .accordion-icon {
-  display: block !important;
-}
-
-@media only screen and (max-width: 767px) {
-  .accordion-alpha-open + .accordion-card-container {
-    height: 100% !important;
+ details summary {
+  list-style: none; /* hide default expansion triangle after js executes */
+  // top-left | top-right | bottom-right | bottom-left
+  border-radius: 4px 4px 4px 4px;
+  &:focus {
+   outline-offset: -2px;
+   @include outline(2px);
+   &:before {
+    background-color: $gray-100;
+   }
   }
+ }
+
+ /* let it be open initially if details has open attribute */
+ details[open] {
+  height: auto;
+  .cagov-open-indicator {
+   border-right: 3px solid black;
+   border-top: 3px solid black;
+   transform: rotate(135deg);
+   top: 1rem;
+   left: 1rem;
+  }
+
+  summary {
+   // top-left | top-right | bottom-right | bottom-left
+   border-radius: 4px 4px 0 0;
+   &:before {
+    // top-left | top-right | bottom-right | bottom-left
+    border-radius: 4px 0 0 0;
+    background-color: $gray-100;
+   }
+  }
+ }
 }
