refined accordion markup

--- a/src/scss/cagov/accordion.scss
+++ b/src/scss/cagov/accordion.scss
@@ -80,6 +80,7 @@ cagov-accordion details {
   // we use outline instead of border becasue .accordion-body parent's overflow is hidden
   outline: 1px solid $gray-200;
   outline-offset: -1px;
+  margin-top: -1px;
  }
 }
 
